bynkc/tests/fixtures/negative/08_arity_mismatch/input.bynk
commons demo {
  fn double(x: Int) -> Int {
    x * 2
  }

  fn caller(a: Int, b: Int) -> Int {
    double(a, b)
  }
}
